update externals forpy

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,21 +1,28 @@
 [cam]
-tag = cam_cesm2_1_rel_31/components/cam
-protocol = svn
-repo_url = https://svn-ccsm-models.cgd.ucar.edu/cam1/release_tags
+branch = forpy_cam
+protocol = git
+repo_url = https://github.com/WillyChap/CAM
 local_path = components/cam
 required = True
 
 [cice]
-tag = cice5_cesm2_1_1_20190321 	
+tag = cice5_cesm2_1_1_20190321
 protocol = git
 repo_url = https://github.com/ESCOMP/CESM_CICE5
 local_path = components/cice
 required = True
 
-[cime]
-tag = cime5.6.21
+[forpy]
+branch = master
 protocol = git
-repo_url = https://github.com/ESMCI/cime
+repo_url = https://github.com/ylikx/forpy.git
+local_path = forpy
+required = True
+
+[cime]
+branch = forpy_cime
+protocol = git
+repo_url = https://github.com/WillyChap/CIME
 local_path = cime
 required = True
 
@@ -66,4 +73,3 @@ required = True
 
 [externals_description]
 schema_version = 1.0.0
-
