--- a/Externals.cfg
+++ b/Externals.cfg
@@ -6,7 +6,7 @@ local_path = components/cam
 required = True
 
 [cice]
-tag = cice5_cesm2_1_1_20190321
+tag = cice5_cesm2_1_1_20231220
 protocol = git
 repo_url = https://github.com/ESCOMP/CESM_CICE5
 local_path = components/cice
@@ -27,30 +27,30 @@ local_path = cime
 required = True
 
 [cism]
-tag = release-cesm2.0.04
+tag = cism-release-cesm2.1.2_04
 protocol = git
-repo_url = https://github.com/ESCOMP/cism-wrapper
+repo_url = https://github.com/ESCOMP/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = release-clm5.0.27
+tag = release-clm5.0.37
 protocol = git
-repo_url = https://github.com/ESCOMP/ctsm/
+repo_url = https://github.com/ESCOMP/CTSM/
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
 
 [mosart]
-tag = release-cesm2.0.03
+tag = release-cesm2.0.04
 protocol = git
-repo_url = https://github.com/ESCOMP/mosart
+repo_url = https://github.com/ESCOMP/MOSART
 local_path = components/mosart
 required = True
 
 [pop]
-tag = pop2_cesm2_1_rel_n06
+tag = pop2_cesm2_1_rel_n15
 protocol = git
 repo_url = https://github.com/ESCOMP/POP2-CESM
 local_path = components/pop
@@ -58,9 +58,9 @@ externals = Externals_POP.cfg
 required = True
 
 [rtm]
-tag = release-cesm2.0.03
+tag = release-cesm2.0.04
 protocol = git
-repo_url = https://github.com/ESCOMP/rtm
+repo_url = https://github.com/ESCOMP/RTM
 local_path = components/rtm
 required = True
 
