--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,5 +1,5 @@
 [cam]
-branch = forpy_cam_rel60
+branch = ftorch_cam_rel60
 protocol = git
 repo_url = https://github.com/WillyChap/CAM
 local_path = components/cam
@@ -12,15 +12,15 @@ repo_url = https://github.com/ESCOMP/CESM_CICE5
 local_path = components/cice
 required = True
 
-[forpy]
+[ftorch]
 branch = master
 protocol = git
-repo_url = https://github.com/ylikx/forpy.git
-local_path = forpy
+repo_url = https://github.com/Cambridge-ICCS/FTorch
+local_path = ftorch
 required = True
 
 [cime]
-branch = forpy_cime
+branch = ftorch_cime
 protocol = git
 repo_url = https://github.com/WillyChap/CIME
 local_path = cime
