externals update with Ftorch

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -13,7 +13,7 @@ local_path = components/cice
 required = True
 
 [ftorch]
-branch = master
+branch = main
 protocol = git
 repo_url = https://github.com/Cambridge-ICCS/FTorch
 local_path = ftorch
