--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,9 +1,8 @@
 [cam]
-tag = cam_cesm2_1_rel_60
+branch = forpy_cam_rel60
 protocol = git
-repo_url = https://github.com/ESCOMP/CAM
+repo_url = https://github.com/WillyChap/CAM
 local_path = components/cam
-externals = Externals_CAM.cfg
 required = True
 
 [cice]
@@ -13,10 +12,17 @@ repo_url = https://github.com/ESCOMP/CESM_CICE5
 local_path = components/cice
 required = True
 
-[cime]
-tag = cime5.6.49
+[forpy]
+branch = master
 protocol = git
-repo_url = https://github.com/ESMCI/cime
+repo_url = https://github.com/ylikx/forpy.git
+local_path = forpy
+required = True
+
+[cime]
+branch = forpy_cime
+protocol = git
+repo_url = https://github.com/jedwards4b/cime
 local_path = cime
 required = True
 
