--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,5 +1,5 @@
 [cam]
-branch = forpy_cam_rel60
+branch = ftorch_forpy_cam_rel60
 protocol = git
 repo_url = https://github.com/WillyChap/CAM
 local_path = components/cam
