Update Externals to new cime

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -20,9 +20,9 @@ local_path = forpy
 required = True
 
 [cime]
-branch = forpy_cime
+branch = ftorch_forpy_cime
 protocol = git
-repo_url = https://github.com/jedwards4b/cime
+repo_url = https://github.com/Cambridge-ICCS/cime_je
 local_path = cime
 required = True
 
