--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,7 @@
 [cam]
-tag = cam_cesm2_1_rel_31/components/cam
+branch = cam_cesm2_1_rel_31.sppt_stochai
 protocol = svn
-repo_url = https://svn-ccsm-models.cgd.ucar.edu/cam1/release_tags
+repo_url = https://github.com/WillyChap/CAM
 local_path = components/cam
 required = True
 
@@ -13,9 +13,9 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.6.21
+branch = cime5.6.21.sppt_stochai
 protocol = git
-repo_url = https://github.com/ESMCI/cime
+repo_url = https://github.com/WillyChap/cime
 local_path = cime
 required = True
 
