--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,6 +1,6 @@
 [cam]
 branch = cam_cesm2_1_rel_31.sppt_stochai
-protocol = svn
+protocol = git
 repo_url = https://github.com/WillyChap/CAM
 local_path = components/cam
 required = True
