--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,7 @@
 [cam]
-tag = cam_cesm2_1_rel_60
+branch = cam_cesm2_1_rel_60.sppt_stochai
 protocol = git
-repo_url = https://github.com/ESCOMP/CAM
+repo_url =  https://github.com/WillyChap/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
@@ -14,9 +14,9 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.6.49
+branch = cime5.6.49.sppt_stochai
 protocol = git
-repo_url = https://github.com/ESMCI/cime
+repo_url = https://github.com/WillyChap/cime
 local_path = cime
 required = True
 
