--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,7 +22,7 @@ required = True
 [cime]
 branch = ftorch_forpy_cime
 protocol = git
-repo_url = https://github.com/Cambridge-ICCS/cime_je
+repo_url = https://github.com/WillyChap/cime
 local_path = cime
 required = True
 
